--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,12 @@
+body {
+  font-family: 'Nunito', Arial, sans-serif;
+  font-size: 12px;
+}
+
+h1, h2, h3, h4, h5, h6 {
+  margin: 0;
+}
+
 
 /**
 For banner over lay add this class to your div
